# display-switch

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml
src/: cli.rs  display.rs  main.rs  parser.rs  profile.rs
src/platform/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
