[package]
name = "display-switch"
version = "0.1.0"
edition = "2021"
authors = ["Neil Graham <grahamneiln@gmail.com>"]
description = "A cross-platform CLI tool for switching and listing display specifications"
license = "MIT"
repository = "https://github.com/yourusername/display-switch"

[[bin]]
name = "display-switch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrandr"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3.8" 